tests/NormalTests/paczka1/small_fuzzy/61309177.err
Error in line 5: osHhywQMBO7 A261 27,1
Error in line 7: rktW626E9 S701 55,1
Error in line 8: rktW626E9 S713 28,5
